# NIGHTWATCH

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NIGHTWATCH_Build_Package.md  README.md  ROADMAP.md  nightwatch.yaml.example  pyproject.toml  pytest.ini
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
docker/: docker-compose.dev.yml
docker/simulators/: Dockerfile.mount  Dockerfile.weather  fault_injection.py  mount_simulator.py  weather_simulator.py
docs/: CONFIGURATION.md  HARDWARE_INTEGRATION_TEST_PLAN.md  HARDWARE_SETUP.md  INTEGRATION_PLAN.md  INTES_MICRO_HISTORY.md  NIGHTWATCH_V0.1_PLAN.md  SCIENTIFIC_FOUNDATIONS.md  SIMULATOR_GUIDE.md  VOICE_COMMANDS.md
docs/assets/: README.md
docs/pos/: POS_LLM_INTEGRATION.md
docs/research/: INTERNATIONAL_SOURCING_GUIDE.md  SOURCING_RESEARCH.md
firmware/onstepx_config/: Config.h
nightwatch/: __init__.py  exceptions.py  llm_client.py  logging_config.py  main.py  orchestrator.py  response_formatter.py  tool_executor.py  types.py  voice_pipeline.py  watchdog.py
pos/: PANEL_RESOURCES.md  POS_RETREAT_SIMULATION.md  README.md
pos/agents/: 01_howard_dutton.md  02_damian_peach.md  03_yuri_petrunin.md  04_michael_clive.md  05_walton_musser.md  06_alec_radford.md  07_michael_hansen.md  08_antonio_garcia.md  09_richard_hedrick.md  10_craig_stark.md  11_bob_denny.md  12_sierra_remote.md
services/: __init__.py  requirements.txt
services/alerts/: __init__.py  alert_manager.py
services/alpaca/: __init__.py  alpaca_client.py
services/astrometry/: plate_solver.py
services/camera/: __init__.py  asi_camera.py  frame_analyzer.py
services/catalog/: __init__.py  catalog.py  catalog_data.py
services/enclosure/: roof_controller.py
services/encoder/: __init__.py  encoder_bridge.py
services/ephemeris/: __init__.py  skyfield_service.py
services/focus/: focuser_service.py
services/guiding/: __init__.py  phd2_client.py
services/indi/: __init__.py  device_adapters.py  indi_client.py
services/meteor_tracking/: __init__.py  fireball_client.py  hopi_circles.py  lexicon_prayers.py  meteor_service.py  shower_calendar.py  trajectory.py  watch_manager.py
services/mount_control/: __init__.py  lx200.py  onstepx_extended.py
services/nlp/: __init__.py  clarification.py  conversation_context.py  sky_describer.py  suggestions.py
services/power/: power_manager.py
services/safety_monitor/: __init__.py  monitor.py
services/scheduling/: __init__.py  condition_provider.py  scheduler.py
services/simulators/: __init__.py  camera_simulator.py
services/voice/: __init__.py  vocabulary_trainer.py  wake_word_trainer.py
services/weather/: __init__.py  ecowitt.py  unified.py
tests/: __init__.py
tests/e2e/: test_emergency_shutdown.py  test_session_flow.py
tests/fixtures/: README.md  __init__.py  conftest.py  mock_camera.py  mock_tts.py
tests/fixtures/audio/: __init__.py
tests/integration/: __init__.py  test_astrometry_camera.py  test_device_layer.py  test_focus_camera.py  test_full_system.py  test_mount_catalog.py  test_safety_enclosure.py  test_safety_mount.py
tests/mocks/: __init__.py  mock_camera.py  mock_focuser.py  mock_gpio.py  mock_solver.py
tests/unit/: __init__.py  test_alerts.py  test_alpaca_client.py  test_camera_service.py  test_catalog.py  test_clarification.py  test_condition_provider.py  test_config.py  test_conversation_context.py  test_emergency_response.py  test_encoder_bridge.py  test_focuser_service.py  test_frame_analyzer.py  test_indi_adapters.py  test_logging_config.py  test_lx200_client.py  test_meteor_tracking.py  test_onstepx_extended.py  test_orchestrator.py  test_phd2_client.py  test_piper_service.py  test_plate_solver.py  test_power_manager.py  test_response_formatter.py  test_roof_controller.py  test_safety_monitor.py  test_scheduler.py  test_sky_describer.py  test_suggestions.py  test_telescope_tools.py  test_tool_executor.py  test_vocabulary_trainer.py  test_wake_word_trainer.py  test_watchdog.py  test_weather.py  test_whisper_service.py  test_wyoming_protocol.py
voice/: __init__.py  requirements.txt
voice/stt/: __init__.py  whisper_service.py
voice/tools/: __init__.py  meteor_tools.py  telescope_tools.py
voice/tts/: __init__.py  piper_service.py
voice/wyoming/: __init__.py  protocol.py  stt_server.py  tts_server.py
