# =============================================================================
# NIGHTWATCH - Voice-Controlled Autonomous Observatory System
# =============================================================================
# Modern Python project configuration using pyproject.toml
# Consolidates build, linting, typing, and testing configuration
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "nightwatch"
version = "0.1.0-dev"
description = "Voice-controlled autonomous observatory system running entirely on-premise"
readme = "README.md"
license = {text = "CC BY-NC-SA 4.0"}
requires-python = ">=3.11"
authors = [
    {name = "THOC Labs"}
]
keywords = [
    "astronomy",
    "telescope",
    "observatory",
    "voice-control",
    "automation",
    "astrophotography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

# Core dependencies - minimal for the nightwatch package itself
# Full dependencies are in services/requirements.txt and voice/requirements.txt
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Full installation with all services
services = [
    "skyfield>=1.48",
    "aiohttp>=3.9",
    "pyserial>=3.5",
]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "pymicro-vad>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "ipython>=8.0",
]
all = [
    "nightwatch[services,voice,dev]",
]

[project.urls]
Homepage = "https://github.com/THOC-Labs/NIGHTWATCH"
Documentation = "https://github.com/THOC-Labs/NIGHTWATCH/tree/main/docs"
Repository = "https://github.com/THOC-Labs/NIGHTWATCH"
Issues = "https://github.com/THOC-Labs/NIGHTWATCH/issues"

[project.scripts]
nightwatch = "nightwatch.main:main"

# =============================================================================
# Setuptools Configuration
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["nightwatch*", "services*", "voice*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
nightwatch = ["py.typed"]

# =============================================================================
# Ruff Configuration (Step 38)
# Fast Python linter and formatter
# =============================================================================

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length consistent with black defaults
line-length = 88

# Include Python files
include = ["*.py", "*.pyi"]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Ignore rules that conflict with our style
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (observatory services need many params)
    "PLR2004", # Magic value comparison (acceptable for thresholds)
    "ARG001",  # Unused function argument (often needed for interface compliance)
    "SIM108",  # Ternary operator (readability preference)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have more flexibility
"tests/**/*.py" = ["PLR2004", "S101"]
# __init__.py can have unused imports for re-export
"*/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Match project structure
known-first-party = ["nightwatch", "services", "voice"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"

# =============================================================================
# MyPy Configuration (Step 39)
# Static type checking
# =============================================================================

[tool.mypy]
python_version = "3.11"

# Strict mode for new code
strict = false  # Enable gradually
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

# Allow gradual typing adoption
ignore_missing_imports = true
allow_untyped_defs = true

# Enable better error messages
show_error_codes = true
show_column_numbers = true
pretty = true

# Plugins for better type inference
plugins = [
    "pydantic.mypy",
]

# Per-module configuration
[[tool.mypy.overrides]]
module = [
    "nightwatch.*",
]
# Stricter checking for core nightwatch package
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# More relaxed for tests
disallow_untyped_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "pyindi_client.*",
    "alpyca.*",
    "faster_whisper.*",
    "piper.*",
    "sounddevice.*",
    "webrtcvad.*",
    "skyfield.*",
]
# Third-party modules without stubs
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration (Step 40)
# Testing framework
# =============================================================================

[tool.pytest.ini_options]
# Minimum pytest version
minversion = "8.0"

# Test discovery paths
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default options
addopts = [
    # Verbose output
    "-v",
    # Show local variables in tracebacks
    "-l",
    # Short test summary
    "-ra",
    # Strict markers (fail on unknown markers)
    "--strict-markers",
    # Enable warnings
    "-W", "default",
    # Color output
    "--color=yes",
]

# Timeout for individual tests (seconds)
timeout = 30
timeout_method = "thread"

# Async mode
asyncio_mode = "auto"

# Custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "e2e: marks end-to-end tests",
    "hardware: marks tests requiring real hardware",
    "unit: marks unit tests (default)",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["nightwatch", "services", "voice"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.paths]
source = [
    "nightwatch/",
    "services/",
    "voice/",
]

[tool.coverage.report]
# Target coverage percentage
fail_under = 60  # Start low, increase to 80% as tests are added
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Bandit Configuration
# Security linting
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B104",  # hardcoded_bind_all_interfaces - needed for development servers
]
